Updated cookie consent prompt text

--- a/games/lock_picker.html
+++ b/games/lock_picker.html
@@ -84,7 +84,15 @@
 
             <div class="w3-container">
                 <p>This page wants to use cookies.</p>
-                <p>The cookies are only used for the game to remember your highscore and personal settings.</p>
+                <p>The cookies are only used for the game to: 
+                    <ul><li>
+                        remember your   <i>highscore</i> 
+                    </li>
+                    <li>
+                        remember your <i>settings</i> 
+                    </li>
+                </ul>
+                </p>
                 <p>Do you allow cookies?</p>
             </div>
 
