--- a/index.html
+++ b/index.html
@@ -120,16 +120,21 @@
     <div class="w3-container w3-padding-large">
       <h2><b>Other javascript game sites worth visiting</b></h2>
       <h3>Minigames <a href="https://thallesmaia.com/" target="_blank" rel="noreferrer">Thalles Maia</a></h3>
-      <div class="w3-row">
-        <div class="w3-container w3-quarter w3-margin-bottom">
-          <a href="https://tmaiadev-snake.netlify.app/" target="_blank" rel="noreferrer"
-            class="w3-button w3-border w3-ripple">Snake Game</a>
-        </div>
-
-        <div class="w3-container w3-quarter w3-margin-bottom w3-margin-left">
-          <a href="https://tmaiadev-tetra.netlify.app/" target="_blank" rel="noreferrer"
-            class="w3-button w3-border w3-ripple">Tetra Game</a>
-        </div>
+      <div class=w3-row>
+        <div class="w3-col l6 m8">
+          <div class="w3-cell-row ">
+            <div class="w3-cell w3-mobile">
+              <a href="https://tmaiadev-snake.netlify.app/" target="_blank" rel="noreferrer"
+                class="w3-button w3-border w3-ripple w3-margin-bottom w3-col l10 m10 s12" >Snake Game</a>
+            </div>
+    
+            <div class="w3-cell w3-mobile">
+              <a href="https://tmaiadev-tetra.netlify.app/" target="_blank" rel="noreferrer"
+                class="w3-button w3-border w3-ripple w3-margin-bottom w3-col l10 m10 s12">Tetra Game</a>
+            </div>
+          </div>  
+      </div>
+  
       </div>
       <h3>Sites</h3>
       <p>
@@ -138,12 +143,15 @@
       </p>
       <p>
         An appstore for free games and webapps:
-        <div class="w3-row">
-          <div class="w3-container w3-quarter w3-margin-bottom">
-            <!--use target=_blank to make the url open in the browser instead of this PWA-->
-            <a href="https://appsco.pe/category/games" target="_blank" rel="noreferrer"
-              class="w3-button w3-border w3-ripple">Appscope</a>
-          </div>
+        <div class=w3-row>
+          <div class="w3-col l4 m6">
+            <div class="w3-cell-row ">
+              <div class="w3-cell w3-mobile">
+                            <!--use target=_blank to make the url open in the browser instead of this PWA-->
+                <a href="https://appsco.pe/category/games" target="_blank" rel="noreferrer"
+                  class="w3-button w3-border w3-ripple w3-margin-bottom w3-col l10 m10 s12" >Appscope</a>
+              </div>
+            </div>  
         </div>
       </p>
       <hr>
