--- a/games/lock_picker.html
+++ b/games/lock_picker.html
@@ -35,7 +35,7 @@
             <label>Dark mode</label></p>
             <button
             onclick="showCookiePrompt();"
-            type="button" class="w3-button w3-grey w3-ripple">Change cookie preferences</button>
+            type="button" class="w3-button w3-border w3-ripple w3-margin-bottom">Change cookie preferences</button>
 
         </form>
     </div>
