--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 <body class="w3-light-grey">
 
   <!--sidebar-->
-  <div id="ui-btn">
-    <div class="w3-col l2 m2 s4" style="margin-left:10px; margin-top:10px;">
+  <div class="w3-col l2 m2 s4" id="ui-btn">
+    <div  style="margin-left:10px; margin-top:10px;">
       <!--include icon with link to the minigames homepage-->
       <div style="width:46%; max-width:100px; position: relative;z-index:1; padding:2%;" class="w3-col s6">
         <a href="#" style="position:relative;z-index:1;">
@@ -160,7 +160,7 @@
     <!-- Footer -->
     <footer class="w3-container w3-padding-32 w3-dark-grey">
       <div class="w3-row-padding">
-        <div class="w3-twothird">
+        <div class="w3-col l12 m12 s12">
           <p>Arcade games in plain javascript. Both online and offline. Installable as app using PWA technology.</p>
           <p>This site is open source. More information and the source code are on
             <a href="https://github.com/MrHaan/js_minigames_public" target="_blank" rel="noreferrer">GitHub</a> </p>
