added special day graphics and colorblind darkmode

--- a/index.html
+++ b/index.html
@@ -45,12 +45,9 @@
   .hover-icon-bg:hover {
     background-color: #00c5d3;
   }
-  body{
-    background-color: hotpink !important;;
-  }
 </style>
 
-<body class=""> <!--class="w3-light-grey"-->
+<body class="w3-light-grey"> 
 
   <!--sidebar-->
   <div class="w3-col l2 m2 s4" id="ui-btn">
