make name lockpicker and description consistent accross files

--- a/games/lock_picker.html
+++ b/games/lock_picker.html
@@ -5,12 +5,12 @@
 <html lang="en">
 
 <head>
-    <title>Lock picker game</title>
+    <title>Lockpicker game</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#00ffff" />
-    <meta name="Description" content="Arcade minigame about lock picking.">
-    <meta name="keywords" content="JavaScript, game, arcade, opensource, lockpicker, pwa, Progressive Web App">
+    <meta name="Description" content="Simple JavaScript arcade minigame for all your devices. Pick the lock to reach the highest score!">
+    <meta name="keywords" content="JavaScript, game, arcade, simple, lock, picker, pwa, Progressive Web App">
 
     <link rel="icon" href="../resources/icons/games/favicon.ico">
     <link rel="icon" href="../resources/icons/games/favicon.svg" type="image/svg+xml">
