add google site verification

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="theme-color" content="#00c5d3" />
   <meta name="Description" content="Collection of simple javascript games">
   <meta name="keywords" content="JavaScript, game, arcade, opensource, pwa">
-
+  <meta name="google-site-verification" content="zRUYMZsO5xiXYiGCb3Fs-PXDScCFMBsWRACQQqaVr88" />
 
   <script src="index.js"></script>
   <link rel="icon" href="resources/icons/favicon.ico">
